objects/ChangeRequest.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SDO_Close_Summary__c</fullName>
        <label>Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>SDO_All</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Priority</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>